Git Tests/force-app/main/default/default/objects/AnaliseERB__c/AnaliseERB__c.object-meta.xml
<CustomObject>
    <label>Análise ERB</label>
    <nameField>
        <displayFormat>ERB-{000}</displayFormat>
        <label>Recomendação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análise ERB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>