Git Tests/force-app/main/default/default/objects/AnaliseERB__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Comentários (opcional)</label>
    <type>TextArea</type>
</CustomField>