Git Tests/force-app/main/default/default/objects/AnaliseERB__c/fields/Orcamento__c.field-meta.xml
<CustomField>
    <fullName>Orcamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orçamento</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Análise ERB</relationshipLabel>
    <relationshipName>AnaliseERB</relationshipName>
    <type>Lookup</type>
</CustomField>