Git Tests/force-app/main/default/default/objects/AnaliseERB__c/fields/StatusRecomendacao__c.field-meta.xml
<CustomField>
    <fullName>StatusRecomendacao__c</fullName>
    <label>Status da Recomendação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceita efetuou a compra</fullName>
            </value>
            <value>
                <fullName>Aceita vai efetuar a compra</fullName>
            </value>
            <value>
                <fullName>Aceita porém cliente sem budget</fullName>
            </value>
            <value>
                <fullName>Aceita porém cliente não quer agora</fullName>
            </value>
            <value>
                <fullName>Aceita (Outros justificar)</fullName>
            </value>
            <value>
                <fullName>Recusada sem interesse por ainda ter estoque</fullName>
            </value>
            <value>
                <fullName>Recusada não trabalha com este produto</fullName>
            </value>
            <value>
                <fullName>Recusada sem interesse por ser laboratório/marca não padronizada</fullName>
            </value>
            <value>
                <fullName>Recusada sem interesse por prazo de entrega</fullName>
            </value>
            <value>
                <fullName>Recusada sem interesse pelo preço</fullName>
            </value>
            <value>
                <fullName>Recusada (Outros Justificar)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>